--- a/4.3 HTML Porfolio Project/index.html
+++ b/4.3 HTML Porfolio Project/index.html
@@ -11,13 +11,16 @@
     <h2>I'm a Web Developer</h2>
     <hr>
     <h3><a href="../4.3 HTML Porfolio Project/public/gospel.html">Unique Gospel Minister's in Nigeria</a> <br></h3>
-    <img src="../4.3 HTML Porfolio Project/assets/images/gospel_img.PNG" alt="gospel image"><br>
+    <img src="../4.3 HTML Porfolio Project/assets/images/gospelimg.PNG" alt="gospel image"><br>
     <h3><a href="../4.3 HTML Porfolio Project/public/music.html">Season Music Artist in Nigeria</a></h3><br>
-    <img src="../4.3 HTML Porfolio Project/assets/images/music_img.PNG" alt="season music minister">
+    <img src="../4.3 HTML Porfolio Project/assets/images/music-img.PNG" alt="season music minister">
     <h3><a href="../4.3 HTML Porfolio Project/public/dm.html">Mike's mentor in Web Development and Ministry</a></h3> <br>
-    <img src="../4.3 HTML Porfolio Project/assets/images/dm_img.PNG" alt="dm img"> <br>
+    <img src="../4.3 HTML Porfolio Project/assets/images/dm-img.PNG" alt="dm img"> <br>
     <h3><a href="../4.3 HTML Porfolio Project/public/birth.html">Mike's birthday Invite Project</a></h3> <br>
-    <img src="../4.3 HTML Porfolio Project/assets/images/birthday_img.PNG" alt="birthday-invite">
+    <img src="../4.3 HTML Porfolio Project/assets/images/birthday-img.PNG" alt="birthday-invite"> <br>
+
+
+    <h3><a href="../4.3 HTML Porfolio Project/public/about-me.html">About me</a> <a href="../4.3 HTML Porfolio Project/public/contact-me.html">Contatct me</a></h3>
  </body>
  </html>
 
