--- a/DOM+Challenge+Starting+Files/DOM Challenge Starting Files/index.html
+++ b/DOM+Challenge+Starting+Files/DOM Challenge Starting Files/index.html
@@ -10,9 +10,9 @@
 
     <h1>Hello</h1>
 
-    <input type="checkbox">
+    <input type="checkbox" class="btn">
 
-    <button style=":active color:red;">Click Me</button>
+    <button style="color: 'red'";>Click Me</button>
 
     <ul>
       <li class="list">
